k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-skills
spec:
  selector:
    app: api-skills
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
