k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-skills-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api.mgaldamez.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-skills
            port:
              number: 80
